salesforce-main/src/main/default/objects/Invoiceheader_details__c/Invoiceheader_details__c.object-meta.xml
<CustomObject>
    <label>Invoice Backing Detail</label>
    <nameField>
        <displayFormat>IBD-{000000}</displayFormat>
        <label>Invoice Backing Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Backing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>