salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Booking that this Invoice Backing Detail is related to.</description>
    <inlineHelpText>The Booking that this Invoice Backing Detail is related to.</inlineHelpText>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Invoice Backing Details</relationshipLabel>
    <relationshipName>Invoice_Backing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>