salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/BPP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>BPP_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>