salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>