salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Customer_POnumber__c.field-meta.xml
<CustomField>
    <fullName>Customer_POnumber__c</fullName>
    <label>Customer PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>