salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Exam_Price__c.field-meta.xml
<CustomField>
    <fullName>Exam_Price__c</fullName>
    <label>Exam Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>