salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Instance that this Invoice Backing Detail is related to.</description>
    <inlineHelpText>The Instance that this Invoice Backing Detail is related to.</inlineHelpText>
    <label>Instance</label>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>Invoice Backing Details</relationshipLabel>
    <relationshipName>Invoice_Backing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>