salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Backing Details</relationshipLabel>
    <relationshipName>Invoiceheader_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>