salesforce-main/src/main/default/objects/Invoiceheader_details__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>